Bug 477746 - Weird black rectangle in Search overlaps field
Summary: Weird black rectangle in Search overlaps field
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.01.80
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-11-30 04:54 UTC by Egor Kuznetsov
Modified: 2023-11-30 07:03 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot with bug (12.67 KB, image/png)
2023-11-30 04:54 UTC, Egor Kuznetsov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Egor Kuznetsov 2023-11-30 04:54:34 UTC
Created attachment 163633 [details]
Screenshot with bug

SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***
Weird black rectangle overlaps search field in Configure

STEPS TO REPRODUCE
1. Open Kate
2. Choose Configure option

OBSERVED RESULT
Search field closed by black rectangle

EXPECTED RESULT
Search field would clear

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.90.0
KDE Frameworks Version: 5.246.0
Qt Version: 6.6.0
Kernel Version: 6.2.0-37-generic (64-bit)
Graphics Platform: Wayland
Processors: 6 × AMD Ryzen 5 5500U with Radeon Graphics
Memory: 7.7 GiB of RAM
Graphics Processor: llvmpipe
Manufacturer: QEMU
Product Name: Standard PC (Q35 + ICH9, 2009)

ADDITIONAL INFORMATION
Comment 1 Waqar Ahmed 2023-11-30 07:03:17 UTC
Git commit 2d139f838ff22574655f9754b4b3aa5f733559c7 by Waqar Ahmed.
Committed on 30/11/2023 at 08:01.
Pushed by waqar into branch 'master'.

Hide completion widget on creation

M  +1    -0    src/completion/katecompletionwidget.cpp

https://invent.kde.org/frameworks/ktexteditor/-/commit/2d139f838ff22574655f9754b4b3aa5f733559c7