Hide completion widget on creation

BUG: 477746